@@ -1,1 +1,1 @@
-10.8.0-rc2
+10.8.0
