@@ -1,3 +1,7 @@
+2012-09-13  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 10.8.0 Released.
+
 2012-09-11  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 10.8.0-rc2 Released.
